--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,6 @@ jobs:
            "project plugin"
            "^ publishLocal"
            "^ scripted"
+    - name: check scalariform
+      run: git diff --exit-code
     - run: rm -rf ~/.ivy2/local
