--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       with:
         java-version: ${{matrix.java}}
         distribution: adopt
+    - uses: sbt/setup-sbt@v1
     - run: sbt -v
            "project precompiler"
            "+ test"
